--- a/user_study/parse_results.ipynb
+++ b/user_study/parse_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,22 +30,10 @@
      "output_type": "stream",
      "text": [
       "52 valid responses\n",
-      "16 reliable responses\n",
-      "[(10, 0.4375), (10, 0.3125), (10, 0.125), (9, 0.5), (7, 0.6), (7, 0.3), (7, 0.2), (7, 0.1), (7, 0.1), (6, 0.125), (5, 0.8333333333333334), (5, 0.6666666666666666), (4, 0.25), (4, 0.25), (4, 0.0), (4, 0.0)]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can't convert type 'tuple' to numerator/denominator",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/user_study/parse_results.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/user_study/parse_results.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m percs \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m([(r\u001b[39m.\u001b[39mmax_climbed, r\u001b[39m.\u001b[39mperc_generated_gradeable()) \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m reliable_responses], reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/user_study/parse_results.ipynb#W1sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(percs)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/user_study/parse_results.ipynb#W1sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(mean(percs))\n",
-      "File \u001b[0;32m/usr/lib/python3.8/statistics.py:316\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    314\u001b[0m \u001b[39mif\u001b[39;00m n \u001b[39m<\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m    315\u001b[0m     \u001b[39mraise\u001b[39;00m StatisticsError(\u001b[39m'\u001b[39m\u001b[39mmean requires at least one data point\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 316\u001b[0m T, total, count \u001b[39m=\u001b[39m _sum(data)\n\u001b[1;32m    317\u001b[0m \u001b[39massert\u001b[39;00m count \u001b[39m==\u001b[39m n\n\u001b[1;32m    318\u001b[0m \u001b[39mreturn\u001b[39;00m _convert(total\u001b[39m/\u001b[39mn, T)\n",
-      "File \u001b[0;32m/usr/lib/python3.8/statistics.py:166\u001b[0m, in \u001b[0;36m_sum\u001b[0;34m(data, start)\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[39mfor\u001b[39;00m typ, values \u001b[39min\u001b[39;00m groupby(data, \u001b[39mtype\u001b[39m):\n\u001b[1;32m    165\u001b[0m     T \u001b[39m=\u001b[39m _coerce(T, typ)  \u001b[39m# or raise TypeError\u001b[39;00m\n\u001b[0;32m--> 166\u001b[0m     \u001b[39mfor\u001b[39;00m n,d \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(_exact_ratio, values):\n\u001b[1;32m    167\u001b[0m         count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    168\u001b[0m         partials[d] \u001b[39m=\u001b[39m partials_get(d, \u001b[39m0\u001b[39m) \u001b[39m+\u001b[39m n\n",
-      "File \u001b[0;32m/usr/lib/python3.8/statistics.py:248\u001b[0m, in \u001b[0;36m_exact_ratio\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    246\u001b[0m     \u001b[39mreturn\u001b[39;00m (x, \u001b[39mNone\u001b[39;00m)\n\u001b[1;32m    247\u001b[0m msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mcan\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt convert type \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m to numerator/denominator\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 248\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(msg\u001b[39m.\u001b[39mformat(\u001b[39mtype\u001b[39m(x)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m))\n",
-      "\u001b[0;31mTypeError\u001b[0m: can't convert type 'tuple' to numerator/denominator"
+      "47 reliable responses\n",
+      "Calibration: [(13, 0.6), (13, 0.5), (12, 0.6), (11, 0.8), (11, 0.6), (10, 0.8), (10, 0.7), (10, 0.7), (10, 0.6), (10, 0.5), (9, 0.8888888888888888), (9, 0.6666666666666666), (9, 0.6666666666666666), (9, 0.6666666666666666), (9, 0.6666666666666666), (9, 0.5555555555555556), (8, 1.0), (8, 0.875), (8, 0.75), (8, 0.75), (8, 0.75), (8, 0.625), (8, 0.5), (8, 0.5), (8, 0.5), (7, 0.8571428571428571), (7, 0.8571428571428571), (7, 0.7142857142857143), (7, 0.7142857142857143), (7, 0.7142857142857143), (7, 0.7142857142857143), (7, 0.5714285714285714), (7, 0.5714285714285714), (7, 0.5714285714285714), (7, 0.5714285714285714), (7, 0.5714285714285714), (6, 0.8333333333333334), (6, 0.6666666666666666), (5, 1.0), (5, 1.0), (5, 0.8), (5, 0.8), (5, 0.8), (4, 1.0), (4, 1.0), (4, 0.75), (4, 0.5)]\n",
+      "Generated: [(13, 0.85), (13, 0.45), (12, 0.7), (11, 0.85), (11, 0.4), (10, 0.85), (10, 0.85), (10, 0.65), (10, 0.6), (10, 0.55), (9, 0.8888888888888888), (9, 0.7777777777777778), (9, 0.7777777777777778), (9, 0.7222222222222222), (9, 0.6666666666666666), (9, 0.3888888888888889), (8, 0.8125), (8, 0.8125), (8, 0.8125), (8, 0.8125), (8, 0.75), (8, 0.75), (8, 0.6875), (8, 0.625), (8, 0.4375), (7, 1.0), (7, 0.8571428571428571), (7, 0.7857142857142857), (7, 0.7857142857142857), (7, 0.7857142857142857), (7, 0.7142857142857143), (7, 0.6428571428571429), (7, 0.5714285714285714), (7, 0.5), (7, 0.42857142857142855), (7, 0.35714285714285715), (6, 0.9166666666666666), (6, 0.5), (5, 1.0), (5, 0.9), (5, 0.8), (5, 0.8), (5, 0.7), (4, 0.875), (4, 0.875), (4, 0.625), (4, 0.25)]\n",
+      "0.7051587301587302\n"
      ]
     }
    ],
@@ -53,6 +41,7 @@
     "from statistics import mean\n",
     "from image_link_mapping import IMAGE_LINKS\n",
     "from survey_response import SurveyResponse\n",
+    "from collections import defaultdict\n",
     "path = '/home/tyebkhad/GeneticBoulders/user_study/Evolving MoonBoard Routes_February 20, 2023_20.45.csv'\n",
     "valid_res = read_valid_results(path)\n",
     "calibration_indices = [i for i, v in enumerate(IMAGE_LINKS) if 'calibrate' in v]\n",
@@ -62,12 +51,15 @@
     "\n",
     "THRESHOLD = 0.5\n",
     "reliable_responses = [r for r in responses if (p := r.perc_calibrated_gradeable()) and p >= THRESHOLD]\n",
+    "rr_dict = defaultdict(list)\n",
+    "for r in reliable_responses:\n",
+    "    rr_dict[r.max_climbed].append(r)\n",
     "print(len(reliable_responses), 'reliable responses')\n",
     "calib_percs = sorted([(r.max_climbed, r.perc_calibrated_gradeable()) for r in reliable_responses], reverse=True)\n",
     "gen_percs = sorted([(r.max_climbed, r.perc_generated_gradeable()) for r in reliable_responses], reverse=True)\n",
-    "print(calib_percs)\n",
-    "print(gen_percs)\n",
-    "print(mean(percs))\n",
+    "print('Calibration:', calib_percs)\n",
+    "print('Generated:', gen_percs)\n",
+    "print(mean(i[1] for i in gen_percs))\n",
     "\n",
     "# look at correlation between max grade and being accurate\n",
     "# \n",
@@ -95,9 +87,15 @@
    "source": [
     "## Recording\n",
     "- 52 valid responses\n",
+    "### Allowing +- 1 in grade\n",
     "- 16 responses with >= 50% correct calibration at or below their max climbing grade\n",
     "    - these responses agreed with predicted grade 30% of the time\n",
-    "- "
+    "### Allowing +- 2 in grade\n",
+    "- 35 responses with >= 50% correct calib at or below max\n",
+    "    - these responses agreed with predicted grade about 55% of the time\n",
+    "### allowing +- 3\n",
+    "- 47 response are valid \n",
+    "    - agree 71% of the time\n"
    ]
   }
  ],
